--- a/admin/src/web/templates/login.html
+++ b/admin/src/web/templates/login.html
@@ -317,7 +317,7 @@
         </div>
       {% endif %}
 
-      <form method="post" action="{{ url_for('login', next=request.args.get('next')) }}" autocomplete="on" novalidate>
+      <form method="post" action="{{ url_for('auth.login', next=request.args.get('next')) }}" autocomplete="on" novalidate>
         <label for="email">Email</label>
         <input id="email" name="email" type="email" inputmode="email" autocomplete="username" required>
 
